# shazam-tray

./: AppIcon.icns  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: daemon.rs  main.rs  protocol.rs  tray.rs  ws_client.rs
