[package]
name = "shazam-tray"
version = "0.1.0"
edition = "2021"
description = "Shazam menu bar app — persistent backend service for macOS"

[dependencies]
tray-icon = "0.21"
tao = "0.35"
mac-notification-sys = "0.6"
tokio-tungstenite = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
dirs = "6"
png = "0.17"

[profile.release]
opt-level = "z"
lto = true
strip = true
