[package]
name = "shazam-tray"
version = "0.2.0"
edition = "2021"
description = "Shazam menu bar app — persistent backend service"

[dependencies]
tray-icon = "0.21"
tao = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
png = "0.17"
sentry = "0.34"

# macOS-only: native notifications
[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"

# Linux: notification via notify-rust
[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"

[profile.release]
opt-level = "z"
lto = true
strip = true
